# act

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  README.md  README_tool.md  build  build.sh  configure  int.cc  microstage.act  muller_c2.act  test.py  test.sh  web_irsim.sh
act/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  act.C  act.cc  act.h  act.m4  act_array.h  act_id.h  act_walk.extra.h  array.cc  basetype.h  body.C  body.cc  body.h  check.C  check.cc  connect.cc  defs.m4  error.C  error.cc  expr.m4  expr2.cc  expr_api.h  expr_dag.cc  expr_extra.c  expr_extra.cc  expr_extra.h  expr_print.cc  expr_width.h  extern.cc  extlang.cc  extlang.h  extmacro.cc  extmacro.h  fets.def  fexpr.cc  fexpr.h  func.cc  (+45 more)
act/common/: .gitignore  CMakeLists.txt  Makefile  agraph.cc  agraph.h  array.h  atrace.c  atrace.h  avl.c  bitset.c  bitset.h  bool.c  bool.h  channel.c  channel.h  config.c  config.h  contexts.c  contexts.h  count.c  count.h  except.c  except.h  ext.c  ext.h  file.c  file.h  hash.c  hash.h  hconfig.cc  hconfig.h  heap.c  heap.h  int.cc  lex.c  lex.h  list.c  log.cc  log.h  lzw.c  (+27 more)
act/doc/: .gitignore  act.texinfo
act/lang/: .gitignore  CMakeLists.txt  Doxyfile  act.cc  act.h  act.m4  act_array.h  act_id.h  act_walk.extra.h  array.cc  basetype.h  body.cc  body.h  check.cc  connect.cc  defs.m4  error.cc  expr.h  expr.m4  expr2.cc  expr_.c  expr_extra.c  expr_width.h  fexpr.cc  fexpr.h  func.cc  global.conf  id.cc  inline.cc  inline.h  inst.cc  inst.h  iter.cc  iter.h  lang.cc  lang.h  lang.m4  macros.cc  mangle.cc  namespaces.cc  (+19 more)
act/lang/doc/: .gitignore  README  act.texinfo  bnf.texinfo  gen  wbox.tex
act/lang/test/: .gitignore  CMakeLists.txt  Makefile  run_subdir.sh  run_subdir_vg.sh  run_vg.sh  test.cc  validate_subdir.sh
act/miniscm/: .gitignore  CMakeLists.txt  MISSING  Makefile  README.md  lisp.h  lispA-Z.c  lispA-Z.h  lispArith.c  lispBuiltin.c  lispCli.c  lispEval.c  lispFrame.c  lispGC.c  lispIO.c  lispInt.h  lispMain.c  lispParse.c  lispPath.c  lispPrint.c  lispString.c  lispTrace.c  lispargs.h
act/passes/: .gitignore  CMakeLists.txt  Makefile  aflat.h  booleanize.cc  booleanize.h  cells.cc  cells.h  emit.cc  finline.cc  finline.h  flatten.cc  netlist.cc  netlist.h  passes.h  sizing.cc  sizing.h  statepass.cc  statepass.h
act/passes/finline/: finline.cc
act/passes/flatten/: Makefile  aflat.h
act/passes/netgen/: .gitignore  Makefile
act/passes/sizing/: sizing.h
act/passes/state/: Makefile  statepass.h
act/pgen/: .gitignore  CMakeLists.txt  expr.c  expr.h  genwalk.c  pgen.c  pgen.def  pgen.h  print.c
act/scripts/: .gitignore  CMakeLists.txt  getbaseos  install  install-scripts  linkso  move-in  mymakedepend
act/simulation/: CMakeLists.txt  Makefile
act/simulation/prsim/: .gitignore  CMakeLists.txt  channel.c  channel.h  prs.c  prs.h  prsim.c  prspack.c
act/simulation/tlint/: .gitignore  CMakeLists.txt  Makefile  hs.cc  tlint.cc
act/simulation/trace/: CMakeLists.txt  main.cc
act/simulation/vcsprsim/: mk_links  vpi_prsim.c
act/tech/: .gitignore  CMakeLists.txt  Makefile  techgen.cc
act/tech/doc/: layout.texinfo
act/test/: .gitignore  run.sh  run_subdir.sh  run_subdir_vg.sh  test.C  test.cc  validate.sh  validate_subdir.sh
act/test/connect/: 1.act  17.act  18.act  19.act  2.act  23.act  31.act  32.act  35.act  36.act  37.act  38.act  9.act
act/test/dl/: .gitignore  0.act  1.act  2.act  Makefile  ext.c  ext.conf  ext2.c  gen_dylib  run.sh  run_vg.sh  validate.sh
act/test/expand/: 0.act  1.act  10.act  16.act  17.act  18.act  19.act  2.act  3.act  4.act  5.act  6.act  8.act
act/test/func/: 0.act  1.act  11.act  13.act  14.act  15.act  16.act  17.act  18.act  19.act  20.act  21.act  23.act  25.act  26.act  27.act  28.act  29.act  30.act  31.act  32.act  33.act  34.act  35.act  36.act  37.act  38.act  39.act  40.act  41.act  42.act  43.act  44.act  45.act  46.act  47.act  48.act  49.act  50.act  51.act  (+13 more)
act/test/inst/: 1.act  10.act  11.act  7.act  8.act  9.act  run.sh  validate.sh
act/test/lang/: 1.act  10.act  100.act  101.act  102.act  103.act  104.act  105.act  106.act  107.act  108.act  109.act  11.act  111.act  112.act  113.act  114.act  115.act  116.act  117.act  118.act  119.act  120.act  121.act  122.act  123.act  124.act  125.act  126.act  127.act  128.act  129.act  130.act  131.act  132.act  133.act  134.act  135.act  136.act  137.act  (+76 more)
act/test/meta/: 10.act  11.act  12.act  13.act  14.act  15.act  16.act  17.act  18.act  19.act  20.act  21.act  22.act  8.act  9.act  run.sh  validate.sh
act/test/misc/: 1.act  10.act  11.act  12.act  13.act  14.act  15.act  16.act  3.act  4.act  5.act  6.act  9.act
act/test/ns/: 1.act  11.act  12.act  13.act  19.act  23.act  24.act  25.act  26.act  27.act  28.act  3.act  5.act  8.act  run.sh
act/test/other/: 1.act  11.act  12.act  2.act  run.sh  validate.sh
act/test/print/: 1.act  10.act  11.act  12.act  13.act  15.act  16.act  17.act  18.act  19.act  2.act  20.act  21.act  22.act  23.act  24.act  25.act  26.act  27.act  28.act  29.act  30.act  32.act  33.act  34.act  35.act  36.act  5.act  6.act  7.act  8.act  run.sh  run_vg.sh  validate.sh
act/test/relaxed/: 0.act  1.act  10.act  2.act  3.act  4.act  5.act  6.act  7.act  8.act  9.act
act/test/types/: 10.act  11.act  14.act  15.act  16.act  17.act  18.act  19.act  21.act  25.act  27.act  28.act  3.act  31.act  37.act  38.act  4.act  41.act  42.act  43.act  45.act  49.act  5.act  51.act  52.act  54.act  57.act  58.act  59.act  60.act  61.act  62.act  63.act  64.act  65.act  66.act  67.act  68.act  69.act  7.act  (+9 more)
act/transform/: CMakeLists.txt  Makefile
common/: .gitignore  CMakeLists.txt  Makefile  NSOutputInt.h  agraph.cc  agraph.h  array.h  atrace.c  atrace.h  avl.c  avl.h  bitset.c  bitset.h  bool.c  bool.h  channel.c  channel.h  checkpoint.C  checkpoint.cc  checkpoint.h  coi.h  config.c  config.h  contexts.c  contexts.h  count.c  count.h  except.c  except.h  ext.c  ext.h  file.c  file.h  hash.c  hash.h  hconfig.C  hconfig.cc  hconfig.h  heap.c  heap.h  (+45 more)
(+1854 files in other folders)
