
add_library(
  ActCommon
  array.h
  bitset.h
  misc.h
  hash.h
  qops.h
  config.h
  atrace.h
  avl.h
  lzw.h
  lex.h
  file.h
  heap.h
  except.h
  pp.h
  list.h
  bool.h
  names.h
  mstring.h
  mytime.h
  channel.h
  hconfig.h
  contexts.h
  count.h
  machine.h
  mem.h
  mutex.h
  thread.h
  sim.h
  log.h
  ext.h
  simthread.h
  simdes.h
  agraph.h
  int.h
  bitset.c
  misc.c
  hash.c
  config.c
  atrace.c
  avl.c
  lzw.c
  lex.c
  file.c
  heap.c
  except.c
  pp.c
  list.c
  bool.c
  names.c
  mstring.c
  time.c
  ext.c)
