# -------------------------------------------------------------------------
#
# Copyright (c) 2022 Henry Heffan
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
# Street, Fifth Floor, Boston, MA  02110-1301, USA.
#
# -------------------------------------------------------------------------

# add_executable(ActAdependExe main.cc) target_link_libraries(ActAdependExe
# ActCommonLib ActLangLib ActPassesLib) set_target_properties(ActAdependExe
# PROPERTIES OUTPUT_NAME adepend) install(TARGETS ActAdependExe DESTINATION
# $ENV{ACT_HOME}/bin/) install(TARGETS ActAdependExe DESTINATION
# $ENV{ACT_HOME}/bin/ RENAME adepend.mark)

add_custom_command(
  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.def
         ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.gram
         ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.h
         ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_id.h
         ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_int.h
         ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.h
  BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/v_walk.extra.h
             ${CMAKE_CURRENT_BINARY_DIR}/v2act.cy
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse.c
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse.def
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse.gram
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse.h
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse_id.h
             ${CMAKE_CURRENT_BINARY_DIR}/v_parse_int.h
             ${CMAKE_CURRENT_BINARY_DIR}/v_walk_X.c
             ${CMAKE_CURRENT_BINARY_DIR}/v_walk_X.h
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMAND
    cp ${CMAKE_CURRENT_SOURCE_DIR}/v2act.cy ${CMAKE_CURRENT_BINARY_DIR}/v2act.cy
    && cp ${CMAKE_CURRENT_SOURCE_DIR}/v_walk.extra.h
    ${CMAKE_CURRENT_BINARY_DIR}/v_walk.extra.h && rm -f v_parse.def v_parse.h
    v_parse_int.h v_parse_id.h v_parse.c v_walk_X.h v_walk_X.c &&
    ${CMAKE_BINARY_DIR}/act/pgen/pgen v2act.cy -V -w X -h -b -p -n v && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_parse.c ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.cc
    && mv ${CMAKE_CURRENT_BINARY_DIR}/v_parse.def
    ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.def && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_parse.gram
    ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.gram && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_parse.h ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.h
    && echo \"/* Auto-generated by pgen, do not edit! */\" >
    ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_id.h && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_parse_int.h
    ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_int.h && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_walk_X.c
    ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.cc && mv
    ${CMAKE_CURRENT_BINARY_DIR}/v_walk_X.h
    ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.h
  DEPENDS ActPGenExe ${CMAKE_CURRENT_SOURCE_DIR}/v2act.cy ${CMAKE_CURRENT_SOURCE_DIR}/v_walk.extra.h)

add_custom_target(
  ActV2actAutogen
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.cc
          ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.def
          ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.gram
          ${CMAKE_CURRENT_SOURCE_DIR}/v_parse.h
          ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_id.h
          ${CMAKE_CURRENT_SOURCE_DIR}/v_parse_int.h
          ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.cc
          ${CMAKE_CURRENT_SOURCE_DIR}/v_walk_X.h)

add_library(
  ActV2actLocalLib
  v_parse.h
  v_parse_id.h
  v_parse_int.h
  v_walk_X.h
  wrap.cc
  v_parse.cc
  v_walk_X.cc
  vnet.cc
  vnet.h)
add_dependencies(ActV2actLocalLib ActV2actAutogen)

add_executable(ActV2actExe1 main.cc v2act.h emit.cc sync.cc)
set_target_properties(ActV2actExe1 PROPERTIES OUTPUT_NAME v2act)
target_link_libraries(ActV2actExe1 ActCommonLib ActPassesLib ActV2actLocalLib)

add_executable(ActV2actExe2 main2.cc)
set_target_properties(ActV2actExe2 PROPERTIES OUTPUT_NAME sv2act)
target_link_libraries(ActV2actExe2 ActCommonLib ActPassesLib ActV2actLocalLib)

install(TARGETS ActV2actExe1 ActV2actExe2 DESTINATION $ENV{ACT_HOME}/bin)
install(
  TARGETS ActV2actExe1
  DESTINATION $ENV{ACT_HOME}/bin
  RENAME v2act.mark)
install(
  TARGETS ActV2actExe2
  DESTINATION $ENV{ACT_HOME}/bin
  RENAME sv2act.mark)

install(FILES v2act_quote.sed DESTINATION $ENV{ACT_HOME}/bin)
install(
  FILES v2act_quote.sed
  DESTINATION $ENV{ACT_HOME}/bin
  RENAME v2act_quote.sed.mark)

install(FILES s2a.conf DESTINATION $ENV{ACT_HOME}/conf/generic)
install(
  FILES s2a.conf
  DESTINATION $ENV{ACT_HOME}/conf/generic
  RENAME s2a.conf.mark)

install_shim(V2act_Lib "" v_parse_id.h act/v2act v_parse_id.h)
install(FILES v_parse_id.h DESTINATION $ENV{ACT_HOME}/include/act/v2act)
